cli: environment impl
